# ot-qca402x

./: CMakeLists.txt  Readme.md
include/: openthread-core-qca4024-config-check.h  openthread-core-qca4024-config.h
script/: bootstrap  build  qca-definitions
src/qca4024/: toolchain.cmake
